--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,11 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
-
-
     </parent>
     <groupId>com.github</groupId>
     <artifactId>test</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>test</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
